add nexus server and jvm parameters